syntax = "proto3";

package drinkService;

message Drink {
    string id = 1;
    string name = 2;
    double price = 3;
}

message FindDrinksResponse {
    repeated Drink drinks = 1;
}

message FindDrinksRequest {
    int32 tableNumber = 1;
}

message OrderRequest {
    repeated string id = 1;
    int32 tableNumber = 2;
}

message OrderResponse {
    repeated string foods = 1;
    int64 preparationTime = 2;
}


service DrinkService {
    rpc FindDrinks (FindDrinksRequest) returns (FindDrinksResponse) {}

    rpc ExecuteOrder (OrderRequest) returns (OrderResponse) {};
}